--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 body {
   background-color: #fffdfb;
   font-family: "Santral";
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 }
 a:hover {
   color:#B29142;
@@ -261,7 +261,7 @@ nav li:first-child {
   top:75%;
   left:50%;
   transform:translateX(-50%);
-  overflow: hidden;
+/*   overflow: hidden; */
   border: 2px solid var(--color);
   transition: color .5s;
   z-index: 3;
@@ -378,7 +378,7 @@ nav li:first-child {
   border-radius: 50%;
   cursor: pointer;
   transition-duration: 0.3s;
-  overflow: hidden;
+/*   overflow: hidden; */
 }
 
 #checkboxInput {
@@ -477,7 +477,7 @@ nav li:first-child {
   justify-content: center;
   cursor: pointer;
   transition-duration: 1s;
-  overflow: hidden;
+/*   overflow: hidden; */
 }
 
 .Btn::before {
