--- a/style.css
+++ b/style.css
@@ -15,7 +15,9 @@ html,
 body {
   height: 100%;
   width: 100%;
+  cursor: none;
 }
+
 body {
   background-color: #fffdfb;
   font-family: "Santral";
@@ -81,22 +83,23 @@ a:hover {
 }
 /* NAVBAR */
 .nav {
-  position: fixed;
+  position: absolute;
   top: 0;
   width: 100%;
-  height: 4em;
+  /* height: 4em; */
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 0 1em 0.5em 1em;
   color: #b29142;
-  background-color: #3b3c43;
+  /* background-color: #3b3c43; */
   z-index: 999;
   font-family: "Santral";
   cursor: pointer;
 }
 .nav-left,
 .nav-right {
+  transform: translateY(-100%);
   font-size:1em;
   display: flex;
   gap: 1.5em;
@@ -193,7 +196,7 @@ nav li:first-child {
 .landingpagesection{
   position:relative;
   height:100vh;
-  margin-top:4.5em;
+  /* margin-top:4.5em; */
   background-image: url(https://newellbrands.imgix.net/52e964bb-e423-3575-8938-38b43f2117a1/52e964bb-e423-3575-8938-38b43f2117a1.jpg?fm=jpg&w=2880);
   background-position: center;
   background-size: cover;
@@ -214,7 +217,7 @@ nav li:first-child {
   height:50vh;
   width:100%;
   position: absolute;
-  top:35%;
+  top:25%;
   left:50%;
   transform: translateX(-50%);
   padding:2em 1em;
@@ -261,7 +264,7 @@ nav li:first-child {
   top:75%;
   left:50%;
   transform:translateX(-50%);
-/*   overflow: hidden; */
+  overflow: hidden;
   border: 2px solid var(--color);
   transition: color .5s;
   z-index: 3;
@@ -378,7 +381,7 @@ nav li:first-child {
   border-radius: 50%;
   cursor: pointer;
   transition-duration: 0.3s;
-/*   overflow: hidden; */
+  overflow: hidden;
 }
 
 #checkboxInput {
@@ -477,7 +480,7 @@ nav li:first-child {
   justify-content: center;
   cursor: pointer;
   transition-duration: 1s;
-/*   overflow: hidden; */
+  overflow: hidden;
 }
 
 .Btn::before {
@@ -663,6 +666,9 @@ nav li:first-child {
   font-weight: 400;
   font-family: "Santral";
 }
+.innercursor, .outercursor{
+  opacity: 1;
+}
 
 @media(min-width:751px){
   .hideOnDesktop{
@@ -671,6 +677,9 @@ nav li:first-child {
 
 }
 @media(max-width:750px){
+  .innercursor, .outercursor{
+    opacity: 0;
+  }
   .hideOnMobile{
     display: none;
   }
