--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
   background-color: #fffdfb;
   font-family: "Santral";
   overflow-x: hidden;
+  overflow-y: auto;
 }
 a:hover {
   color:#B29142;
